# rgb-gen

./: LICENSE  RGB.cabal  RGB.hs
