name:                RGB
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Chris Dueck
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

executable RGB
  main-is: RGB.hs

  ghc-options:
    -O2 -fllvm -optlo -O3

  build-depends:
    base        >=4.7  && <4.8,
    containers  >=0.5  && <0.6,
    directory   >=1.2  && <1.3,
    repa        >=3.2  && <3.3,
    repa-devil  >=0.3  && <0.4

  default-language: Haskell2010
